# impala-sparse

./: .gitignore  .gitmodules  CMakeLists.txt  GraphBLAS_test.cpp  README.md  c_helpers.cpp  int_converter.py  main.impala  sparse.impala  sparse_cuda.cu  test.cpp  test_matrix_market.cpp
Scripts/: Plots.ipynb
artic/: CMakeLists.txt  intrincics.cpp  main.art  sparse.art  sparse_wrapper.cpp  test.art
cpp/: CMakeLists.txt  cusparse_example_spgemm.cpp  graphblast_wrappers.cu  gspgemm.cu  mkl_sparsemm.c  sparse_cuda.cu  test_matrix_market.cpp
futhark/: CMakeLists.txt  main.c  read_matrix.c  sparse.c  sparse.fut  sparse.h  test.fut
include/: csr_wrapper.h  cuda_helpers.h  cuda_sparse_wrappers.h  sparse.h
matrix_data/: matrixA  matrixB  matrixC  matrix_market_example
matrix_data/apsp/: input  output
matrix_data/eWiseDataSet/: G61.mtx  as-caida_G_010.mtx-out  simple1.mtx  simple2.mtx
test/: CMakeLists.txt  test.cpp
